--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -62,6 +62,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/recycler_id_income"
+        android:background="#FFF1F3FC"
         android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
