--- a/app/src/main/res/layout/income_recycler_data.xml
+++ b/app/src/main/res/layout/income_recycler_data.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="5dp"
     android:layout_margin="5dp"
     android:elevation="5dp"
+    android:background="#FFF1F3FC"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_margin="5dp"
+        android:background="#FFF1F3FC"
+        android:padding="5dp"
         android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -21,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="10 set 2023"
+                android:layout_margin="5dp"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
                 android:id="@+id/date_txt_income"
@@ -41,21 +45,18 @@
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
-                android:id="@+id/type_txt_income"
-
-                />
+                android:id="@+id/type_txt_income" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Note"
+                android:maxLines="1"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:layout_below="@+id/type_txt_income"
-                android:id="@+id/note_txt_income"
-                />
-
+                android:id="@+id/note_txt_income" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -77,3 +78,5 @@
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
+
+
