--- a/app/src/main/res/layout/income_recycler_data.xml
+++ b/app/src/main/res/layout/income_recycler_data.xml
@@ -4,15 +4,15 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="5dp"
-    android:layout_margin="5dp"
     android:elevation="5dp"
-    android:background="#FFF1F3FC"
+    android:layout_margin="5dp"
+    android:background="@color/background_white"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:background="#FFF1F3FC"
+        android:background="@color/background_white"
         android:padding="5dp"
         android:layout_height="wrap_content">
 
