--- a/app/src/main/res/menu/bottommenu.xml
+++ b/app/src/main/res/menu/bottommenu.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/income"/>
 
     <item android:id="@+id/expense"
-        android:title="Despesas"
+        android:title="Investimentos"
         android:icon="@drawable/expense"/>
 
 </menu>
