--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,10 +16,12 @@
 
     <color name="income_color">#AEEA00</color>
 
-    <color name="expense_color">#DD2C00</color>
+    <color name="expense_color">#DFBC04</color>
 
     <color name="date_color">#00C853</color>
 
-    <color name="expense_amount">#E81313</color>
+    <color name="expense_amount">#00C853</color>
+
+    <color name="background_white">#FFF1F3FC</color>
     
 </resources>
