--- a/app/src/main/res/layout/expense_recycler_data.xml
+++ b/app/src/main/res/layout/expense_recycler_data.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="10 set 2023"
+                android:layout_margin="5dp"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
                 android:id="@+id/date_txt_expense"
