--- a/app/src/main/res/layout/income_recycler_data.xml
+++ b/app/src/main/res/layout/income_recycler_data.xml
@@ -20,16 +20,20 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content">
+
             <TextView
+                android:id="@+id/date_txt_income"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
                 android:text="10 set 2023"
                 android:layout_margin="5dp"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:textStyle="bold"
-                android:id="@+id/date_txt_income"
                 android:textColor="@color/date_color"
-                />
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
