--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -130,7 +130,7 @@
                     />
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
-                    android:id="@+id/recycler_id_income"
+                    android:id="@+id/recycler_income"
                     android:layout_height="wrap_content">
 
                 </androidx.recyclerview.widget.RecyclerView>
@@ -145,9 +145,8 @@
                     />
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
-                    android:id="@+id/recycler_id_expense"
+                    android:id="@+id/recycler_expense"
                     android:layout_height="wrap_content">
-
 
                 </androidx.recyclerview.widget.RecyclerView>
 
