--- a/app/src/main/res/layout/dashboard_income.xml
+++ b/app/src/main/res/layout/dashboard_income.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="@color/white"
         android:layout_height="wrap_content">
 
         <TextView
@@ -47,7 +48,6 @@
             android:textColor="@color/income_color"
             android:layout_marginTop="10dp"
             />
-
 
     </LinearLayout>
 
