--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -131,7 +131,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:id="@+id/recycler_income"
-                    android:layout_height="wrap_content">
+                    android:layout_height="200dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
@@ -146,7 +146,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:id="@+id/recycler_expense"
-                    android:layout_height="wrap_content">
+                    android:layout_height="200dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
