--- a/app/src/main/res/layout/dashboard_expense.xml
+++ b/app/src/main/res/layout/dashboard_expense.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="@color/white"
         android:layout_height="wrap_content">
 
         <TextView
