--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -22,7 +22,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Registration"
+                android:text="Crie sua conta"
                 android:textColor="@android:color/white"
                 android:textAppearance="?android:textAppearanceLarge"
                 android:gravity="center"
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="Email:"
+                android:inputType="textEmailAddress"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:background="@drawable/edittext_background"
@@ -44,7 +45,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:hint="Password:"
+                android:hint="Senha:"
+                android:inputType="textPassword"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:background="@drawable/edittext_background"
@@ -56,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="Registration"
+                android:text="Cadastrar"
                 android:background="@drawable/edittext_background"
                 android:textColor="@android:color/white"
                 android:id="@+id/btn_reg"
@@ -69,7 +71,7 @@
                 android:gravity="center"
                 android:textColor="@android:color/white"
                 android:id="@+id/signin_here"
-                android:text="Already have account?Sign in here."
+                android:text="Já sou cadastrado"
                 android:padding="5dp"
                 />
 
