--- a/app/src/main/res/layout/dashboard_expense.xml
+++ b/app/src/main/res/layout/dashboard_expense.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Type:"
+            android:text="Tipo:"
             android:gravity="center"
             android:textColor="@color/nav_header"
             android:id="@+id/type_expense_ds"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="5dp"
-            android:text="Amount:"
+            android:text="Valor:"
             android:textColor="@color/expense_color"
             android:textAppearance="?android:textAppearanceMedium"
             android:id="@+id/amount_expense_ds"
