--- a/app/src/main/res/layout/expense_recycler_data.xml
+++ b/app/src/main/res/layout/expense_recycler_data.xml
@@ -52,7 +52,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Note"
+                android:text="Nota"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
