--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -53,7 +53,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:textAppearanceLarge"
                         android:textColor="@color/expense_color"
-                        android:text="Investimentos"
+                        android:text="Despesas"
                         />
 
                 </RelativeLayout>
@@ -164,7 +164,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Investimento"
+                android:text="Despesas"
                 android:id="@+id/expense_ft_text"
                 android:padding="5dp"
                 android:textColor="@android:color/white"
@@ -200,7 +200,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Renda"
+                android:text="Receitas"
                 android:id="@+id/income_ft_text"
                 android:textColor="@android:color/white"
                 android:padding="5dp"
