--- a/app/src/main/res/layout/fragment_target.xml
+++ b/app/src/main/res/layout/fragment_target.xml
@@ -45,18 +45,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <ScrollView
             android:layout_width="match_parent"
-            android:id="@+id/recycler_id_target"
-            android:background="#FFF1F3FC"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:id="@+id/recycler_id_target"
+                android:background="#FFF1F3FC"
+                android:layout_height="match_parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
+        </ScrollView>
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
-            android:id="@+id/fb_main_plus_btn"
+            android:id="@+id/fb_target_plus_btn"
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="20dp"
